                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 01-03-2006 changed: Video database retrieves the real path, and thumbs are set based on that.  IMDb thumbs are now only used if a file or folder thumb isn't present.
 - 01-03-2006 added: delete single bookmark in video osd.
 - 01-03-2006 added: overlay to indicate that a movie is watched in database views (overlaywatched.png). you can now choose.
 - 01-03-2006 fixed: rar-compressed trainers.
 - 01-03-2006 fixed: issue with rar volumes starting with .001.
 - 01-03-2006 fixed: IMDb lookups weren't matched correctly from My Files so were looked up again unnecessarily.
 - 28-02-2006 fixed: Mouse didn't reset the idle timer.
 - 28-02-2006 added: Controlgroup focus is now saved on window exit.
 - 28-02-2006 fixed: Actions could be sent to modal dialogs that were animating out.
 - 28-02-2006 fixed: Blank bookmark for resume time was shown in bookmarks.
 - 28-02-2006 fixed: [ 1438714 ] @-sign causes 'Invalid computer name'
 - 28-02-2006 added: Control.IsVisible(id) visibility condition.
 - 28-02-2006 fixed: Play DVD button on home wouldn't work for the first few seconds after it appeared.
 - 28-02-2006 changed: Screensaver will now kick in if a modal dialog is onscreen.
 - 28-02-2006 added: A little more exception handling to a couple of program database functions.
 - 28-02-2006 changed: GUI messages are sent to all controls with the given id, rather than just the first one.
 - 28-02-2006 changed: MultiImages with blank <info> fallback to the <imagepath> path.